# dflash

./: .gitignore  README.md  benchmark.py  model.py  pyproject.toml  run_benchmark.sh
dflash/: benchmark.py  cli.py  generate_mlx.py  model_mlx.py  utils.py  utils_mlx.py
tests/: test_model.py
