[project]
name = "dflash"
version = "0.1.0"
description = "DFlash: Block Diffusion for Flash Speculative Decoding"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "rich",
    "packaging",
    "ninja",
    "loguru",
    "numpy",
    "tqdm",
    "datasets",
    "requests",
]

[project.optional-dependencies]
sglang = [
    "sglang[all] @ git+https://github.com/sgl-project/sglang.git@refs/pull/20547/head#subdirectory=python",
]
vllm = [
    "vllm @ git+https://github.com/vllm-project/vllm.git",
]
